I think this is not actually needed.

BUG: 276406